@@ -9,7 +9,9 @@ import com.fasterxml.jackson.core.JsonProcessingException;
 import com.fasterxml.jackson.databind.ObjectMapper;
 import org.springframework.stereotype.Service;
 
-import java.util.Arrays;
+import java.util.List;
+import java.util.stream.Collectors;
+
 
 @Service
 public class ResumeService {
@@ -29,7 +31,42 @@ public class ResumeService {
                 .orElseThrow(() -> new RuntimeException("사용자를 찾을 수 없습니다."));
 
         Resume resume = new Resume();
-        resume.setUser(user);
+        mapDtoToResume(resumeDto, resume);
+        resume.setUser(user); // 사용자 연결
+        resumeRepository.save(resume);
+    }
+
+    // 이력서 조회 (단건)
+    public ResumeDto getResume(Long resumeId) {
+        Resume resume = resumeRepository.findById(resumeId)
+                .orElseThrow(() -> new RuntimeException("이력서를 찾을 수 없습니다."));
+        return mapResumeToDto(resume);
+    }
+
+    // 사용자별 이력서 전체 조회
+    public List<ResumeDto> getResumesByUser(Long userId) {
+        List<Resume> resumes = resumeRepository.findByUserUserId(userId);
+        return resumes.stream().map(this::mapResumeToDto).collect(Collectors.toList());
+    }
+
+    // 이력서 업데이트
+    public void updateResume(Long resumeId, ResumeDto resumeDto) {
+        Resume resume = resumeRepository.findById(resumeId)
+                .orElseThrow(() -> new RuntimeException("이력서를 찾을 수 없습니다."));
+
+        mapDtoToResume(resumeDto, resume);
+        resumeRepository.save(resume);
+    }
+
+    // 이력서 삭제
+    public void deleteResume(Long resumeId) {
+        Resume resume = resumeRepository.findById(resumeId)
+                .orElseThrow(() -> new RuntimeException("이력서를 찾을 수 없습니다."));
+        resumeRepository.delete(resume);
+    }
+
+    // DTO -> Entity
+    private void mapDtoToResume(ResumeDto resumeDto, Resume resume) {
         resume.setTitle(resumeDto.getTitle());
         resume.setIndustries(resumeDto.getIndustries());
         resume.setJob(resumeDto.getJob());
@@ -45,15 +82,10 @@ public class ResumeService {
         } catch (JsonProcessingException e) {
             throw new RuntimeException("JSON 변환 오류", e);
         }
-
-        resumeRepository.save(resume);
     }
 
-    // 이력서 조회
-    public ResumeDto getResume(Long id) {
-        Resume resume = resumeRepository.findById(id)
-                .orElseThrow(() -> new RuntimeException("이력서를 찾을 수 없습니다."));
-
+    // Entity -> DTO
+    private ResumeDto mapResumeToDto(Resume resume) {
         try {
             return ResumeDto.builder()
                     .title(resume.getTitle())
@@ -62,10 +94,10 @@ public class ResumeService {
                     .strengths(resume.getStrengths())
                     .weaknesses(resume.getWeaknesses())
                     .skills(resume.getSkills())
-                    .activities(Arrays.asList(objectMapper.readValue(resume.getActivities(), ResumeDto.Activity[].class))) // 수정
-                    .awards(Arrays.asList(objectMapper.readValue(resume.getAwards(), ResumeDto.Award[].class)))
-                    .certificates(Arrays.asList(objectMapper.readValue(resume.getCertificates(), ResumeDto.Certificate[].class)))
-                    .languages(Arrays.asList(objectMapper.readValue(resume.getLanguages(), ResumeDto.Language[].class)))
+                    .activities(List.of(objectMapper.readValue(resume.getActivities(), ResumeDto.Activity[].class)))
+                    .awards(List.of(objectMapper.readValue(resume.getAwards(), ResumeDto.Award[].class)))
+                    .certificates(List.of(objectMapper.readValue(resume.getCertificates(), ResumeDto.Certificate[].class)))
+                    .languages(List.of(objectMapper.readValue(resume.getLanguages(), ResumeDto.Language[].class)))
                     .build();
         } catch (JsonProcessingException e) {
             throw new RuntimeException("JSON 변환 오류", e);
